# DeepOnet-aeroelastic-stability

./: .gitignore  First_implementation_walkthrough.md  README.md  Review_on_first_implementation_results.md  Review_on_second_implementation.md  Second_implementation_walkthrough.resolved  Third_implementation_findings_walkthrough.md  plan.md  pyproject.toml  suggested_approaches.md
data/splits/: aoa_interpolation.json  shape_holdout_baseline.json  shape_holdout_shorter.json  shape_holdout_taller.json
experiments/: comparison_shorter.csv  split_models_comparison.csv
experiments/tier1_4b_mlp/: config.yaml
experiments/tier1_4b_mlp/results/: metrics_4b_mlp.json  model_4b_mlp.pt
experiments/tier1_baseline/: config.yaml
experiments/tier1_baseline/results/: ensemble_metadata.pt  metrics.json  mlp_model.pt  mlp_model_0.pt  mlp_model_1.pt  (+3 more)
experiments/tier1_improved/: config.yaml
experiments/tier1_lightgbm/: config.yaml
experiments/tier1_means/: config.yaml
experiments/tier1_rom/: config.yaml
experiments/tier1_spectral/: config.yaml
experiments/tier1_tabpfn/: config.yaml
notebooks/: 01_preprocess.ipynb
src/: __init__.py
src/analysis/: compare_approaches.py  compare_split_models.py
src/data/: features.py  preprocessing.py  splits.py
src/eval/: metrics.py  plots.py
src/models/: baseline.py  mlp_scalar.py
src/rom/: __init__.py  galloping_gp.py  landau.py  shedding_model.py
src/training/: train_lightgbm.py  train_mlp_derivative.py  train_rom.py  train_tabpfn.py  train_tier1.py  train_tier1_improved.py  train_tier1_means.py  train_tier1_spectral.py
(+25 files in other folders)
